--- a/dinning.html
+++ b/dinning.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+header:
+    text-color: '#000'
+    background-color-mobile: '#fff'
 blocks:
     -
         _id: banner-video
@@ -27,8 +30,8 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading:
-            heading: TARU
+            subHeading: TARU
+            heading: 
             p-text: >-
                 <p>The signature culinary destination of the resort, Taru offers
                 an immersive dining experience, through reinvented authentic
@@ -36,6 +39,10 @@ blocks:
                 modern cooking techniques and ingredients, balanced with
                 contrasting international specialties.<br /><br />Open 7am -
                 10pm everyday.</p>
+            buttons: 
+                -   text: Discover more
+                    url:     
+                    button-color: mint-400
         carousel:
             desktop-image-position: right
             dots: true
@@ -52,13 +59,20 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading:
-            heading: BEACH HOUSE
+            subHeading: BEACH HOUSE
+            heading: 
             p-text: >-
                 <p>A stunning addition to the Canggu coastline, the Beach House
                 lures with its shimmering pool, and ocean breeze. An ideal
                 setting for craft cocktails and the delicate flavours of the
                 sea.<br /><br /><br />Open 8am - 10pm everyday.</p>
+            buttons: 
+                -   text: Discover more
+                    url:     
+                    button-color: mint-400
+                -   text: Reserve a Table
+                    url:     
+                    button-color: dark
         carousel:
             desktop-image-position: left
             dots: true
@@ -75,13 +89,20 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading:
-            heading: SAZON
+            subHeading: SAZON
+            heading: 
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Spanish hideaway on Batu Bolong, where vibrant
                 atmosphere meets authentic flavours.<br /><br /><br />Mon -
                 Thurs Open 8am - 9pm <br />Fri - Sat Open Noon - 4am</p>
+            buttons: 
+                -   text: Discover more
+                    url:     
+                    button-color: mint-400
+                -   text: Reserve a Table
+                    url:     
+                    button-color: dark
         carousel:
             desktop-image-position: right
             dots: true
@@ -98,13 +119,20 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading:
-            heading: POOL BAR
+            subHeading: POOL BAR
+            heading: 
             p-text: >-
                 <p>Lounge poolside, where private cabanas offer serene retreats,
                 and the gentle ripple of fountains blends with the rhythmic
                 crash of distant waves along the shore.<br /><br /><br /><br
                 />Open 7am - 7pm everyday.</p>
+            buttons: 
+                -   text: Discover more
+                    url:     
+                    button-color: mint-400
+                -   text: Reserve a Table
+                    url:     
+                    button-color: dark
         carousel:
             desktop-image-position: left
             dots: true
