--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+header:
+    text-color: '#000'
+    background-color-mobile: '#fff'
 blocks:
     -
         _id: banner-video
@@ -35,6 +38,14 @@ blocks:
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
                 class="sub-heading">HOURS</h3><p>8am - 11pm</p><h3
                 class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
+            buttons: 
+                -   text: BOOK A TABLE
+                    url:     
+                    button-color: mint-400
+                    
+                -   text: menu
+                    url:     
+                    button-color: mint-400
         carousel:
             desktop-image-position: right
             dots: true
