--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+header:
+    text-color: '#000'
+    background-color-mobile: '#fff'
 blocks:
     -
         _id: banner-video
@@ -41,6 +44,11 @@ blocks:
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
                 class="sub-heading">HOURS</h3><p>7am-10pm</p><h3
                 class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
+                
+            buttons: 
+                -   text: BOOK A TABLE
+                    url:     
+                    button-color: mint-400
         carousel:
             desktop-image-position: right
             dots: true
