--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+header:
+    text-color: '#000'
+    background-color-mobile: '#fff'
 blocks:
     -
         _id: banner-video
@@ -169,8 +172,8 @@ blocks:
     -
         _id: offset-grid
         content-1:
-            subHeading:
-            heading: SENSE OF HARMONY
+            subHeading: SENSE OF HARMONY
+            heading: 
             p-text: >-
                 <p>A curated selection of rejuvenating treatments draws from
                 time-honoured rituals and modern sensibilities to restore
@@ -185,8 +188,8 @@ blocks:
             src: /uploads/health-club.jpg
             title: Health Club
         content-2:
-            subHeading:
-            heading: HEALTH CLUB
+            subHeading: HEALTH CLUB
+            heading: 
             p-text: >-
                 <p>Begin or end the day in the best possible way. Maintain your
                 fitness regime in the resort's Health Club with dual-functional
@@ -298,13 +301,17 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading:
-            heading: TARU
+            subHeading: TARU
+            heading: 
             p-text: >-
                 <p>Talented chefs craft authentic Indonesian cuisine, using only
                 the freshest, locally sourced ingredients. Experience the rich
                 tapestry of flavours that Bali has to offer<br /><br />Open 7am
                 - 10pm everyday.</p>
+            buttons: 
+                -   text: Discover more
+                    url:     
+                    button-color: mint-400
         carousel:
             desktop-image-position: left
             dots: true
