regent with terry changes

--- a/Experiences.html
+++ b/Experiences.html
@@ -35,8 +35,8 @@ blocks:
     -
         _id: offset-grid
         content-1:
-            subHeading:
-            heading: GATEWAY TO BALI
+            subHeading: GATEWAY TO BALI
+            heading: 
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -49,8 +49,8 @@ blocks:
             src: /uploads/desktop-banner.jpg
             title: Experience
         content-2:
-            subHeading:
-            heading: IN THE HEART OF CANGGU
+            subHeading: IN THE HEART OF CANGGU
+            heading: 
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore et dolore magna
@@ -81,6 +81,8 @@ blocks:
         image-width: max(80%, 8rem)
         mobile-image-width: 80%
         img_aspect: Wide Landscape
+        col:
+                color-scheme: base
         scroll-items:
             -
                 image: /uploads/experiences1.jpg
@@ -116,6 +118,8 @@ blocks:
         image-width: max(80%, 8rem)
         mobile-image-width: 80%
         img_aspect: Wide Landscape
+        col:
+                color-scheme: base
         scroll-items:
             -
                 image: /uploads/experience3.jpg
