--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -30,6 +30,9 @@ blocks:
             we have a selection of spaces for all requests.<br />Our stunning
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
+        bottom-text:
+                block-content-html: >-
+                    <p><a href="tel:623612019999">TEL: +62 361 201 9999 </a></p><p><a href="mailto:">events@regentbalicanggu.com</a></p>
         overlay-color-scheme: mint-400
         content-max-width:
         text-alignment: center
