Updated 2 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 header:
-    text-color: '#000'
+    text-color: '#ffffff'
     background-color-mobile: '#fff'
 blocks:
     -
