--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 header:
-    text-color: '#000'
+    text-color: '#ffffff'
     background-color-mobile: '#fff'
 blocks:
     -
@@ -173,7 +173,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading: SENSE OF HARMONY
-            heading: 
+            heading:
             p-text: >-
                 <p>A curated selection of rejuvenating treatments draws from
                 time-honoured rituals and modern sensibilities to restore
@@ -189,7 +189,7 @@ blocks:
             title: Health Club
         content-2:
             subHeading: HEALTH CLUB
-            heading: 
+            heading:
             p-text: >-
                 <p>Begin or end the day in the best possible way. Maintain your
                 fitness regime in the resort's Health Club with dual-functional
@@ -302,15 +302,16 @@ blocks:
         _id: split-banner-slider
         content:
             subHeading: TARU
-            heading: 
+            heading:
             p-text: >-
                 <p>Talented chefs craft authentic Indonesian cuisine, using only
                 the freshest, locally sourced ingredients. Experience the rich
                 tapestry of flavours that Bali has to offer<br /><br />Open 7am
                 - 10pm everyday.</p>
-            buttons: 
-                -   text: Discover more
-                    url:     
+            buttons:
+                -
+                    text: Discover more
+                    url:
                     button-color: mint-400
         carousel:
             desktop-image-position: left
