header button color code

--- a/Wellness.html
+++ b/Wellness.html
@@ -3,6 +3,8 @@ layout: default
 header:
     text-color: '#fff'
     background-color-mobile: '#000'
+    button-bg: "#fff"
+    button-text-color: "#000"
 blocks:
     -
         _id: banner-video
