--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 header:
-    text-color: '#000'
-    background-color-mobile: '#fff'
+    text-color: '#fff'
+    background-color-mobile: '#000'
+    button-bg: "#000"
+    button-text-color: "#fff"
+    
 blocks:
     -
         _id: banner-video
