--- a/third-design.html
+++ b/third-design.html
@@ -3,6 +3,8 @@ layout: default
 header:
     text-color: '#000'
     background-color-mobile: '#fff'
+    button-bg: "#000"
+    button-text-color: "#fff"
 blocks:
     -
         _id: banner-video
