added if statments to basic scroll

--- a/Experiences.html
+++ b/Experiences.html
@@ -93,6 +93,10 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url: '#'
             -
                 image: /uploads/experiences2.jpg
                 block-content-html: >-
@@ -105,6 +109,10 @@ blocks:
                     private helicopter arrival ensures you bypass road traffic
                     and arrive in tranquil style.</p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url: '#'
         color-scheme: mint-500
     -
         _id: horizontal-scroll-basic
@@ -132,6 +140,10 @@ blocks:
                     purification rites, has beckoned travellers in pursuit of
                     spiritual rejuvenation for over a millennium.</p><p></p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url: #
             -
                 image: /uploads/experience4.jpg
                 block-content-html: >-
@@ -143,6 +155,10 @@ blocks:
                     the intricacies of the age-old Subak irrigation system—a
                     testament to Balinese ingenuity.</p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url: #
         color-scheme: dark
 seo:
     title: Regent Website Proposal | Kelapa Creative
