--- a/Wellness.html
+++ b/Wellness.html
@@ -90,6 +90,10 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url:
             -
                 image: /uploads/treatment2.jpg
                 block-content-html: >-
@@ -97,6 +101,10 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url:
             -
                 image: /uploads/treatment3.jpg
                 block-content-html: >-
@@ -104,6 +112,10 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
+                reserve-link:
+                button:
+                    text: learn more
+                    url:
         color-scheme: base
     -
         _id: offset-grid
