--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ blocks:
                     intimate retreat of refinement, indulgence, and serene
                     coastal living.</p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/private-beach-villa.jpg
                 block-content-html: >-
@@ -99,6 +103,10 @@ blocks:
                     stillness. With curated spirits and butler care, your villa
                     is a sanctuary by the sea.</p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-3.jpg
                 block-content-html: >-
@@ -107,6 +115,10 @@ blocks:
                     pages and adapt to future needs, in a way that’s easy for
                     your team to manage. </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-4.jpg
                 block-content-html: >-
@@ -115,6 +127,10 @@ blocks:
                     device but also that it’s thoughtfully designed for mobile
                     users.</p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-5.jpg
                 block-content-html: >-
@@ -123,6 +139,10 @@ blocks:
                     at every stage of the project to ensure the site loads
                     lighting fast. </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-6.jpg
                 block-content-html: >-
@@ -131,6 +151,10 @@ blocks:
                     with built-in editable meta-fields on every page for
                     seamless SEO management. </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-7.jpg
                 block-content-html: >-
@@ -139,6 +163,10 @@ blocks:
                     content delivery network for global speed and SSL for
                     security.  </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-8.jpg
                 block-content-html: >-
@@ -147,6 +175,10 @@ blocks:
                     the site being hacked, including all code used in the site.
                     </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-9.jpg
                 block-content-html: >-
@@ -155,6 +187,10 @@ blocks:
                     the interactive elements you need to satisfy every marketing
                     goal. </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-10.jpg
                 block-content-html: >-
@@ -163,6 +199,10 @@ blocks:
                     pages & tailored lead generation forms on-demand without
                     understanding code.</p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
             -
                 image: /uploads/regent-features-11.jpg
                 block-content-html: >-
@@ -171,6 +211,10 @@ blocks:
                     Facebook, Google, Pinterest), and analytics as well as any
                     other verification you might need. </p>
                 link:
+                reserve-link: '#'
+                button:
+                    text: learn more
+                    url: 
         color-scheme: base
     -
         _id: offset-grid
