Updated 2 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#ffffff'
     background-color-mobile: '#fff'
-    button-bg: "#000"
-    button-text-color: "#fff"
+    button-bg: '#000'
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
