--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@ layout: default
 header:
     text-color: '#fff'
     background-color-mobile: '#000'
-    button-bg: "#000"
-    button-text-color: "#fff"
-    
+    button-bg: '#000'
+    button-text-color: '#fff'
 blocks:
     -
         _id: banner-video
@@ -27,15 +26,15 @@ blocks:
         block-content-html: >-
             <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven
             where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are
-            silhouetted in the morning sun, boards  under arms ready to take on
-            Bali's famous reef breaks. Watching the  waves, listening to the
-            call of the Indian Ocean, you might catch the  scent of incense or
-            the melody of the gamelan emitting from Pura Batu  Mejan, a
-            centuries old sea temple set on rock as black as jet. A blessed way
-            to begin each day.</p><p></p><p><div style="max-width:25rem;
-            margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY
-            CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US
-            BUILD ONE FOR YOU.</h3></div></p><p></p><a class="button-featured"
+            silhouetted in the morning sun, boards under arms ready to take on
+            Bali's famous reef breaks. Watching the waves, listening to the call
+            of the Indian Ocean, you might catch the scent of incense or the
+            melody of the gamelan emitting from Pura Batu Mejan, a centuries old
+            sea temple set on rock as black as jet. A blessed way to begin each
+            day.</p><p></p><p></p><p><div style="max-width:25rem; margin:auto;
+            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
+            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
+            YOU.</h3></div></p><p></p><p></p><a class="button-featured"
             href="#"> RESERVE NOW</a>
         overlay-color-scheme: mint-400
         content-max-width: 35rem
@@ -44,15 +43,7 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: >-
-            <h3 class="sub-heading">REGENT CLUB</h3><h2 class="heading-lg">Above
-            the Ocean, Beyond the Ordinary</h2><p>Explore an exclusive sanctuary
-            on your terms, and look forward to generous additional privileges,
-            featuring all-day buffet and a-la-carte gourmet offerings, premium
-            alcoholic beverages, daily afternoon tea and evening cocktail
-            inclusive of champagne. <br /><br />Participate in dedicated
-            cultural activities, and indulge in our comfortable adult-only
-            cabanas and infinity pool.</p>
+        block-content-html: "<h3 class=\"sub-heading\">REGENT CLUB</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Explore an exclusive sanctuary on your terms, and look forward to generous additional privileges, featuring all-day buffet and a-la-carte gourmet offerings, premium alcoholic beverages, daily afternoon tea and evening cocktail inclusive of champagne. <br /><br />Participate in dedicated cultural activities, and indulge in our comfortable adult-only cabanas and infinity pool.</p>"
         background-desktop-image: /uploads/desktop-banner.jpg
         background-mobile-image: /uploads/desktop-banner.jpg
         videos:
@@ -94,7 +85,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/private-beach-villa.jpg
                 block-content-html: >-
@@ -106,7 +97,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-3.jpg
                 block-content-html: >-
@@ -118,7 +109,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-4.jpg
                 block-content-html: >-
@@ -130,7 +121,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-5.jpg
                 block-content-html: >-
@@ -142,7 +133,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-6.jpg
                 block-content-html: >-
@@ -154,7 +145,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-7.jpg
                 block-content-html: >-
@@ -166,7 +157,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-8.jpg
                 block-content-html: >-
@@ -178,7 +169,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-9.jpg
                 block-content-html: >-
@@ -190,7 +181,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-10.jpg
                 block-content-html: >-
@@ -202,7 +193,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
             -
                 image: /uploads/regent-features-11.jpg
                 block-content-html: >-
@@ -214,7 +205,7 @@ blocks:
                 reserve-link: '#'
                 button:
                     text: learn more
-                    url: 
+                    url:
         color-scheme: base
     -
         _id: offset-grid
@@ -226,7 +217,7 @@ blocks:
                 time-honoured rituals and modern sensibilities to restore
                 balance and harmony. Guests can indulge in wet areas including
                 sauna, vitality pool, and ice bath, each crafted to invigorate
-                circulation and soothe tension. </p>
+                circulation and soothe tension.</p>
             button:
             text: Discover More
             url: '#'
@@ -357,9 +348,9 @@ blocks:
                 - 10pm everyday.</p>
             buttons:
                 -
-                    text: Discover more
+                    text: VIEW MENU
                     url:
-                    button-color: mint-400
+                    button-color: '#000000'
         carousel:
             desktop-image-position: left
             dots: true
