--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 header:
     text-color: '#fff'
     background-color-mobile: '#000'
-    button-bg: '#000'
-    button-text-color: '#fff'
+    button-bg: '#D5E3DD'
+    button-text-color: '#000'
 blocks:
     -
         _id: banner-video
@@ -32,9 +32,7 @@ blocks:
             melody of the gamelan emitting from Pura Batu Mejan, a centuries old
             sea temple set on rock as black as jet. A blessed way to begin each
             day.</p><p></p><p></p><p><div style="max-width:25rem; margin:auto;
-            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
-            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
-            YOU.</h3></div></p><p></p><p></p><a class="button-featured"
+            margin-bottom:2rem;"><h3 class="mt-8">Jl. Pantai Batu Bolong No. 93 xx <br/>Canggu, Kuta Utara<br/>Badung, Bali, Indonesia</h3></div></p><p></p><p></p><a class="button-featured"
             href="#"> RESERVE NOW</a>
         overlay-color-scheme: mint-400
         content-max-width: 35rem
