--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ blocks:
             melody of the gamelan emitting from Pura Batu Mejan, a centuries old
             sea temple set on rock as black as jet. A blessed way to begin each
             day.</p><p></p><p></p><p><div style="max-width:25rem; margin:auto;
-            margin-bottom:2rem;"><h3 class="mt-8">Jl. Pantai Batu Bolong No. 93 xx <br/>Canggu, Kuta Utara<br/>Badung, Bali, Indonesia</h3></div></p><p></p><p></p><a class="button-featured"
+            margin-bottom:2rem;"><h3 class="mt-8">Jl. Pantai Batu Bolong No. 93
+            xx <br />Canggu, Kuta Utara<br />Badung, Bali,
+            Indonesia</h3></div></p><p></p><p></p><a class="button-featured"
             href="#"> RESERVE NOW</a>
         overlay-color-scheme: mint-400
         content-max-width: 35rem
@@ -91,114 +93,6 @@ blocks:
                     morning, while a private pool and teak bath invite
                     stillness. With curated spirits and butler care, your villa
                     is a sanctuary by the sea.</p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-3.jpg
-                block-content-html: >-
-                    <h3>FLEXIBLE</h3> <h2>Designed to grow</h2> <p>We’ll build
-                    custom modular blocks that allow you to build unlimited
-                    pages and adapt to future needs, in a way that’s easy for
-                    your team to manage. </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-4.jpg
-                block-content-html: >-
-                    <h3>RESPONSIVE</h3> <h2>Mobile-friendly</h2> <p>We’ll ensure
-                    the website not only looks great across every browser &
-                    device but also that it’s thoughtfully designed for mobile
-                    users.</p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-5.jpg
-                block-content-html: >-
-                    <h3>PERFORMANCE </h3> <h2>Optimised for speed</h2> <p>Built
-                    with modern tech stack and optimised for speed & performance
-                    at every stage of the project to ensure the site loads
-                    lighting fast. </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-6.jpg
-                block-content-html: >-
-                    <h3>SEARCH OPTIMISATION </h3> <h2>Built-in SEO</h2>
-                    <p>Designed to meet all of Google’s performance standards &
-                    with built-in editable meta-fields on every page for
-                    seamless SEO management. </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-7.jpg
-                block-content-html: >-
-                    <h3>RELIABILITY</h3> <h2>100% Uptime</h2> <p>We use fast,
-                    reliable website hosting for guaranteed uptime, leveraging a
-                    content delivery network for global speed and SSL for
-                    security.  </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-8.jpg
-                block-content-html: >-
-                    <h3>SAFETY</h3> <h2>Backups & Security</h2> <p>We provide
-                    daily backups of the website and guaranteed security against
-                    the site being hacked, including all code used in the site.
-                    </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-9.jpg
-                block-content-html: >-
-                    <h3>ENGAGING</h3> <h2>Interactive elements</h2> <p>From
-                    carousels & galleries to pop-ups and FAQs we’ll create all
-                    the interactive elements you need to satisfy every marketing
-                    goal. </p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-10.jpg
-                block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Flexible Forms</h2> <p>We’ll
-                    build you a custom form builder to let your team add landing
-                    pages & tailored lead generation forms on-demand without
-                    understanding code.</p>
-                link:
-                reserve-link: '#'
-                button:
-                    text: learn more
-                    url:
-            -
-                image: /uploads/regent-features-11.jpg
-                block-content-html: >-
-                    <h3>ESSENTIAL DATA</h3> <h2>Tracking & Analytics</h2>
-                    <p>Full control over your tracking codes (including
-                    Facebook, Google, Pinterest), and analytics as well as any
-                    other verification you might need. </p>
                 link:
                 reserve-link: '#'
                 button:
