--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ blocks:
                 -
                     img: /uploads/taru-1.jpg
                     alt: Taru
-        color-scheme: base
+        color-scheme: mint-200
         scheme-padding: small-padding
         scheme-max-width: l
     -
