Updated 6 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -297,25 +297,25 @@ blocks:
                 video_aspect_ratio:
                 link:
             -
-                image: /uploads/KC-Regent-slider-2.jpg
-                video_path:
-                video_type:
-                video_aspect_ratio:
-                link:
-            -
                 image: /uploads/videos/carving-cover.jpg
                 video_path: /uploads/videos/carving-50k-HB.mp4
                 video_type: mp4
                 video_aspect_ratio: 0.6
                 link:
             -
-                image: /uploads/KC-Regent-slider-4.jpg
+                image: /uploads/rectangle-39.jpg
                 video_path:
                 video_type:
                 video_aspect_ratio:
                 link:
             -
-                image: /uploads/KC-Regent-slider-5.jpg
+                image: /uploads/rectangle-38.jpg
+                video_path:
+                video_type:
+                video_aspect_ratio:
+                link:
+            -
+                image: /uploads/rectangle-40.jpg
                 video_path:
                 video_type:
                 video_aspect_ratio:
